--- a/SingUpPg/index.html
+++ b/SingUpPg/index.html
@@ -50,7 +50,7 @@
                     <img src="../imgLogo/i.png" alt="Logo">
                 </div>
 
-                <form class="formCnt" action="https://formsubmit.co/gabrielfgs2004@gmail.com" method="POST" >
+                <form class="formCnt" action="#" method="#">
                     <h2>Crear cuenta</h2>
                     <div class="input-ctn">
                         <div class="user-box">
@@ -62,14 +62,14 @@
                             <label class="email" for="email">Correo</label>
                         </div>
                         <div class="user-box pssInpt_box">
-                            <input id="password" type="password" name="password" required="">
+                            <input id="password" class="password" type="password" name="password" required="">
                             <label class="password" for="password">Contraseña</label>
                             <img id="eyeicon" src="../imgpag/eye-close.png">
                         </div>
                         <div class="user-box pssInpt_box">
-                            <input id="password" type="password" name="password" required="">
+                            <input id="Cpassword" class="Rpassword" type="password" name="password" required="">
                             <label class="password" for="password">Confirmar Contraseña</label>
-                            <img id="eyeicon" src="../imgpag/eye-close.png">
+                            <img id="eyeicon2" src="../imgpag/eye-close.png">
                         </div>
                     </div>
                     <div class="seprO">o</div>
@@ -80,7 +80,7 @@
                         </a>
                     </div>
                     <div class="btn_frm-ctn">
-                        <button class="btn_ctrAccount" type="submit" onclick="infor()">
+                        <button class="btn_ctrAccount" type="submit">
                            <span class="btn_txt">Crear cuenta</span> 
                         </button>
                     </div>
@@ -103,7 +103,9 @@
         </footer>
 
         <script type="text/javascript" src="../gnrJvsCode/main.js"></script>
+        <script type="text/javascript" src="../gnrJvsCode/registerUsr.js"></script>
         <script src="https://unpkg.com/scrollreveal"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     </body>
 </html>
