--- a/user_Login_Page/index.html
+++ b/user_Login_Page/index.html
@@ -44,7 +44,7 @@
                     <img src="../imgLogo/i.png" alt="Logo">
                 </div>
 
-                <form class="formCnt" action="https://formsubmit.co/gabrielfgs2004@gmail.com" method="POST" >
+                <form class="formCnt" action="#" method="#" >
                     <h2>LOGIN</h2>
                     <div class="input-ctn">
                         <div class="user-box">
@@ -52,7 +52,7 @@
                             <label class="email" for="email">correo</label>
                         </div>
                         <div class="user-box pssInpt_box">
-                            <input id="password" type="password" name="password" required="">
+                            <input id="password" class="password" type="password" name="password" required="">
                             <label class="password" for="password">contraseña</label>
                             <img id="eyeicon" src="../imgpag/eye-close.png">
                         </div>
@@ -61,7 +61,7 @@
                         <a href="#">¿Olvidó su contraseña?</a>
                     </div>
                     <div class="btn_frm-ctn">
-                        <button type="submit" onclick="infor()">
+                        <button type="submit" class="logInPg">
                            <span class="btn_txt">Continuar</span> 
                         </button>
                     </div>
@@ -83,7 +83,9 @@
         </footer>
 
         <script type="text/javascript" src="../gnrJvsCode/main.js"></script>
+        <script type="text/javascript" src="../gnrJvsCode/logIn.js"></script>
         <script src="https://unpkg.com/scrollreveal"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     </body>
 </html>
