--- a/SAIgpt/index.html
+++ b/SAIgpt/index.html
@@ -82,7 +82,12 @@
             <div class="bringArrowSec">
                 <i class="fa-solid fa-arrow-left"></i>
             </div>
-            <div class="pnlAi"></div>
+            <div class="pnlAi">
+                <div class="iaTitle">
+                    <img src="../imgLogo/pixelcut-export.png" alt="">
+                    <h2 class="ttltTxt">¿ Cómo puedo ayudarte hoy ?</h2>
+                </div>
+            </div>
             <div class="txtBox_ctn">
                 <div class="addNew">
                     <button class="btnAdd">
@@ -90,15 +95,13 @@
                     </button>
                 </div>
                 <div class="txtBox">
-                    <textarea name="txtWrite" placeholder="Pregúntame algo..." rows="2"></textarea>
+                    <textarea name="txtWrite" class="txtWrite" placeholder="Pregúntame algo..." rows="2"></textarea>
                     <button class="incCtn">
                         <i class="fa-solid fa-paper-plane"></i>
                     </button>
                 </div>
             </div>
         </main>
-
-       
 
         <script type="text/javascript" src="../gnrJvsCode/main.js"></script>
         <script type="text/javascript" src="../gnrJvsCode/mainAi.js"></script>
