--- a/SAIgpt/profile_page/index.html
+++ b/SAIgpt/profile_page/index.html
@@ -85,7 +85,7 @@
                                     <input id="inputPrf" type="file" 
                                     class="account-settings-fileinput ChngFl" accept="image/*"/>
                                 </label> &nbsp;
-                                <button type="button" class="btn btn-default md-btn-flat">Restablecer</button>
+                                <button type="button" class="btn btn-default md-btn-flat" id="resetPhoto">Restablecer</button>
                                 <br>
                                 <br>
                                 <small>Allowed JPG, GIF or PNG. Max size of 800K</small>
