--- a/SingUpPg/index.html
+++ b/SingUpPg/index.html
@@ -12,7 +12,6 @@
         <script src="https://kit.fontawesome.com/a1580b1b63.js" crossorigin="anonymous"></script>
     </head>
     <body>
-
         <div class="returnArrow animate__animated animate__fadeInDownBig">
             <a href="../user_Login_Page/index.html"><i class="fa-solid fa-arrow-left"></i></a>
         </div>
@@ -30,7 +29,7 @@
                 <ul class="first-list">
                     <li class="nav_txt Menu"><a href="../index.html">Inicio</a></li>
                     <span style="color: #0000ff;">|</span>
-                    <li class="nav_txt Medicine"><a href="#">Medicina</a></li>
+                    <li class="nav_txt Medicine"><a href="../medicinePag/index.html">Medicina</a></li>
                     <span style="color: #0000ff;">|</span>
                     <li class="nav_txt News"><a href="#">Noticias</a></li>
                     <span style="color: #0000ff;">|</span>
@@ -39,7 +38,6 @@
                     <li class="nav_txt User"><a href="../user_Login_Page/index.html"><i class="fa-solid fa-user"></i></a></li>
                 </ul>
             </nav>
-
         </header>
 
 
@@ -88,7 +86,6 @@
                         <p><span>¿Ya tienes cuenta?</span><a href="../user_Login_Page/index.html">  Entre aquí</a></p>
                     </div>
                 </form>
-
             </section>
         </main>
 
