--- a/SAIgpt/index.html
+++ b/SAIgpt/index.html
@@ -59,9 +59,9 @@
             <div class="historyBx">
                 <p >Recientes</p>
                 <div class="txt_Bx-ctn">
-                    <div class="txt_Bx">
+                    <div class="txt_Bx section0">
                         <p class="txtTitle">Ihc</p>
-                        <p class="timeTask">4:00 <span class="dayTime">p</span>. m.</p>
+                        <p class="timeTask">1:00 a. m.</p>
                     </div>
                 </div>
             </div>
@@ -76,7 +76,6 @@
                 <p class="txtComent"></p>
             </div>
         </section>
-
         
         <main class="AIBox">
             <div class="bringArrowSec">
@@ -102,6 +101,51 @@
                 </div>
             </div>
         </main>
+
+
+
+        <section class="comentSect">
+            <div class="head">
+                <i class="fa-solid fa-arrow-left headArr"></i>
+            </div>
+            <div class="comt_ttl-bx">
+                <h2>COMENTARIOS Y ASESORAMIENTO</h2>
+            </div>
+            <div class="comt_info-bx">
+                <div class="txtBox comentTxtBx">
+                    <textarea name="txtWrite" class="txtWriteCmt " placeholder="¿Que tienes en mente?, escribe un mensaje detallado para colaborar con SAI" rows="2"></textarea>
+                    <button class="incCtnCmt">
+                        <i class="fa-solid fa-paper-plane"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="tollsCnt">
+                <div class="tooltip-container">
+                    <span class="tooltip">Selecciona en tu nombre en la barra superior de la plataforma</span>
+                    <span class="text">¿Cómo voy a mi perfil?</span>
+                </div>
+                <div class="tooltip-container">
+                    <span class="tooltip">Nuestra IA te indica acerca de posibles enfermedades las cuales puedes estar pasando en base a informes médicos por todo el internet</span>
+                    <span class="text">¿Qué hace la IA?</span>
+                </div>
+                <div class="tooltip-container">
+                    <span class="tooltip">Para informar de algún error tiene el apartado de comentarios dónde puede escribir y nosotros recibiremos el mensaje</span>
+                    <span class="text">¿Cómo puedo informar de algún error?</span>
+                </div>
+                <div class="tooltip-container">
+                    <span class="tooltip">Ingresando al menú de noticias se puede evidenciar las diversas localizaciones de diversas enfermedades infecciosas</span>
+                    <span class="text">¿Cómo puedo ver la localización de distintas enfermedades?</span>
+                </div>
+                <div class="tooltip-container">
+                    <span class="tooltip">Ingresa al perfil y selecciona en la opción "Aplicación" esta te dará el link de descarga de la app</span>
+                    <span class="text">¿Cómo puedo descargar la aplicación?</span>
+                </div>
+                <div class="tooltip-container">
+                    <span class="tooltip">Más veracidad y coherencia en las respuestas de la IA, siendo está mucho más precisa</span>
+                    <span class="text">¿Qúe me da el plan de subscripción?</span>
+                </div>
+            </div>
+        </section>
 
         <script type="text/javascript" src="../gnrJvsCode/main.js"></script>
         <script type="text/javascript" src="../gnrJvsCode/mainAi.js"></script>
