--- a/contact_Page/index.html
+++ b/contact_Page/index.html
@@ -28,7 +28,7 @@
                     <span style="color: #0000ff;">|</span>
                     <li class="nav_txt Medicine"><a href="../medicinePag/index.html">Medicina</a></li>
                     <span style="color: #0000ff;">|</span>
-                    <li class="nav_txt News"><a href="#">Noticias</a></li>
+                    <li class="nav_txt News"><a href="../newsPage/index.html">Noticias</a></li>
                     <span style="color: #0000ff;">|</span>
                     <li class="nav_txt Contacts"><a href="index.html">Contáctanos</a></li>
                     <span style="color: #0000ff;">|</span>
