--- a/medicinePag/index.html
+++ b/medicinePag/index.html
@@ -27,9 +27,9 @@
                 <ul class="first-list">
                     <li class="nav_txt Menu"><a href="../index.html">Inicio</a></li>
                     <span style="color: #0000ff;">|</span>
-                    <li class="nav_txt Medicine"><a href="#">Medicina</a></li>
+                    <li class="nav_txt Medicine"><a href="../medicinePag/index.html">Medicina</a></li>
                     <span style="color: #0000ff;">|</span>
-                    <li class="nav_txt News"><a href="#">Noticias</a></li>
+                    <li class="nav_txt News"><a href="../newsPage/index.html">Noticias</a></li>
                     <span style="color: #0000ff;">|</span>
                     <li class="nav_txt Contacts"><a href="../contact_Page/index.html">Contáctanos</a></li>
                     <span style="color: #0000ff;">|</span>
@@ -38,7 +38,6 @@
             </nav>
 
         </header>
-
 
 
         <main class="mainMedic">
@@ -144,8 +143,8 @@
                 </div>
                 <div class="dnwl_app-ctn">
                     <ul class="dnwl_app">
-                        <li><a href="#"><img src="imgpag/pngwing.com (3).png"></a></li>
-                        <li><a href="#"><img src="imgpag/pngwing.com (2).png"></a></li>
+                        <li><a href="#"><img src="../imgpag/pngwing.com (3).png"></a></li>
+                        <li><a href="#"><img src="../imgpag/pngwing.com (2).png"></a></li>
                     </ul>
                 </div>
                 <br>
