--- a/SAIgpt/index.html
+++ b/SAIgpt/index.html
@@ -27,7 +27,7 @@
                     <ul class="infoTxt ">
                         <li >
                             <i class="fa-solid fa-newspaper"></i>
-                            <p class="linkA3"><a href="#">Noticias</a></p>
+                            <p class="linkA3"><a href="newsPage_SAI/index.html">Noticias</a></p>
                         </li>
                         <li >
                             <i class="fa-solid fa-play"></i>
@@ -143,6 +143,54 @@
                 <div class="tooltip-container">
                     <span class="tooltip">Más veracidad y coherencia en las respuestas de la IA, siendo está mucho más precisa</span>
                     <span class="text">¿Qúe me da el plan de subscripción?</span>
+                </div>
+            </div>
+        </section>
+
+        <section class="planVIP-ctn">
+            <i class="fa-solid fa-x"></i>
+            <div class="boxPlnVIP boxOneVP">
+                <div class="bxInf">
+                    <div class="dctVip">
+                        <h3>Basic</h3>
+                    </div>
+                    <div class="InfoVip">
+                        <ul>
+                            <li>Asistencia con la redacción, resolución de problemas y más</li>
+                            <li>Acceso limitado a análisis de datos avanzado, cargas de archivos, visión, navegación web y GPT personalizados</li>
+                            <li>Acceso limitado a SAIGPT‑4o</li>
+                        </ul>
+                        <div class="ctn-price">
+                            <h2>USD 0$/mes</h2>
+                            <button class="btnVip btnVpOn">
+                                Plan Actual
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="boxPlnVIP boxTwoVP">
+                <div class="bxInf">
+                    <div class="dctVip">
+                        <span class="flex h-7 w-7 items-center justify-center rounded-full border border-token-border-light">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24" class="icon-sm shrink-0"><path fill="currentColor" d="M6.394 4.444c.188-.592 1.024-.592 1.212 0C8.4 8.9 9.1 9.6 13.556 10.394c.592.188.592 1.024 0 1.212C9.1 12.4 8.4 13.1 7.606 17.556c-.188.592-1.024.592-1.212 0C5.6 13.1 4.9 12.4.444 11.606c-.592-.188-.592-1.024 0-1.212C4.9 9.6 5.6 8.9 6.394 4.444m8.716 9.841a.41.41 0 0 1 .78 0c.51 2.865.96 3.315 3.825 3.826.38.12.38.658 0 .778-2.865.511-3.315.961-3.826 3.826a.408.408 0 0 1-.778 0c-.511-2.865-.961-3.315-3.826-3.826a.408.408 0 0 1 0-.778c2.865-.511 3.315-.961 3.826-3.826Zm2.457-12.968a.454.454 0 0 1 .866 0C19 4.5 19.5 5 22.683 5.567a.454.454 0 0 1 0 .866C19.5 7 19 7.5 18.433 10.683a.454.454 0 0 1-.866 0C17 7.5 16.5 7 13.317 6.433a.454.454 0 0 1 0-.866C16.5 5 17 4.5 17.567 1.317"></path></svg>
+                        </span>
+                        <h3>Premium</h3>
+                    </div>
+                    <div class="InfoVip">
+                        <ul>
+                            <li>Acceso a análisis de datos avanzado, cargas de archivos, visión y navegación web</li>
+                            <li>Up to 5x more messages for SAIGPT‑4o</li>
+                            <li>Acceso anticipado a nuevas características</li>
+                            <li>Generación de imágenes con DALL E</li>
+                        </ul>
+                        <div class="ctn-price">
+                            <h2>USD 15$/mes</h2>
+                            <button class="btnVip btnVpTw">
+                                Probar Plan
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
