--- a/SAIgpt/profile_page/index.html
+++ b/SAIgpt/profile_page/index.html
@@ -27,7 +27,7 @@
                     <ul class="infoTxt second_ctn">
                         <li>
                             <i class="fa-solid fa-newspaper"></i>
-                            <a class="profileTxt linkA3"  href="#">Noticias</a>
+                            <a class="profileTxt linkA3"  href="../newsPage_SAI/index.html">Noticias</a>
                         </li>
                         <li>
                             <i class="fa-solid fa-play"></i>
