--- a/newsPage/index.html
+++ b/newsPage/index.html
@@ -75,7 +75,7 @@
                     <ul class="app_lst">
                         <li class="app fcb"><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
                         <li class="app wht"><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
-                        <li class="app ytb"><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                        <li class="app ytb"><a a href="https://youtu.be/XYOi49G0GsY" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
                     </ul>
                 </div>
                 <div class="ubi-ctn">
