--- a/SAIgpt/index.html
+++ b/SAIgpt/index.html
@@ -26,12 +26,12 @@
                 <div class="txt_nav first-list">
                     <ul class="infoTxt ">
                         <li >
-                            <i class="fa-solid fa-newspaper"></i>
-                            <p class="linkA3"><a href="newsPage_SAI/index.html">Noticias</a></p>
+                            <i class="fa-solid fa-map"></i>
+                            <p class="linkA3"><a href="newsPage_SAI/index.html">Mapa</a></p>
                         </li>
                         <li >
                             <i class="fa-solid fa-play"></i>
-                            <p class="linkA4"><a href="#">Videos</a></p>
+                            <p class="linkA4"><a href="videosPage_SAI/index.html">Videos</a></p>
                         </li>
                         <li>
                             <a class="profileTxt usr-Name" href="profile_page/index.html">User</a>
