--- a/SAIgpt/newsPage_SAI/index.html
+++ b/SAIgpt/newsPage_SAI/index.html
@@ -26,12 +26,12 @@
                 <div class="txt_nav first-list">
                     <ul class="infoTxt second_ctn">
                         <li>
-                            <i class="fa-solid fa-newspaper"></i>
-                            <a class="linkA3"  href="index.html">Noticias</a>
+                            <i class="fa-solid fa-map"></i>
+                            <a class="linkA3"  href="index.html">Mapa</a>
                         </li>
                         <li>
                             <i class="fa-solid fa-play"></i>
-                            <a class="linkA4"  href="#">Videos</a>
+                            <a class="linkA4"  href="../videosPage_SAI/index.html">Videos</a>
                         </li>
                         <li>
                             <a class="profileTxt actPg usr-Name" href="../profile_page/index.html">User</a>
@@ -64,7 +64,7 @@
                     </datalist>
 
                     <button>
-                            Añadir Brote
+                            Seleccionar
                     </button>
                 </div>
                 <div class="brtsCtn">
