--- a/SAIgpt/profile_page/index.html
+++ b/SAIgpt/profile_page/index.html
@@ -26,12 +26,12 @@
                 <div class="txt_nav first-list">
                     <ul class="infoTxt second_ctn">
                         <li>
-                            <i class="fa-solid fa-newspaper"></i>
-                            <a class="profileTxt linkA3"  href="../newsPage_SAI/index.html">Noticias</a>
+                            <i class="fa-solid fa-map"></i>
+                            <a class="profileTxt linkA3"  href="../newsPage_SAI/index.html">Mapa</a>
                         </li>
                         <li>
                             <i class="fa-solid fa-play"></i>
-                            <a class="profileTxt linkA4"  href="#">Videos</a>
+                            <a class="profileTxt linkA4"  href="../videosPage_SAI/index.html">Videos</a>
                         </li>
                         <li>
                             <a class="profileTxt actPg usr-NickName" href="index.html">User</a>
@@ -70,6 +70,10 @@
                             <li class="ntfcCtn">
                                 <a class="list-group-item list-group-item-action"
                                  href="#account-notifications">Notificación</a>
+                            </li>
+                            <li class="crStn">
+                                <a class="list-group-item list-group-item-action"
+                                 href="#account-logOut">Cerrar Cuenta</a>
                             </li>
                         </ul>                    
                     </div>
