--- a/SAIgpt/newsPage_SAI/index.html
+++ b/SAIgpt/newsPage_SAI/index.html
@@ -64,7 +64,7 @@
                     </datalist>
 
                     <button>
-                            Seleccionar
+                            Añadir Brote
                     </button>
                 </div>
                 <div class="brtsCtn">
